# rust-actix-postgres-multi-tenant

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  deny.toml  spec.yaml
.github/workflows/: infra-create-dedicated-do-environment.yaml  infra-manage-digital-ocean-resources.yaml  rust.yml
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-97ecaedc9be2332834725e5715fd333004475492a1c1efc81009454d03c38fc6.json  query-ebad18792c9286ef4adcf072303629d4490911da97f47e9795bc85a6a6ffd87d.json
certificate/: key.pem
certs/: cert.pem
configuration/: base.yaml  development.yaml  production.yaml
configurations/: base.yaml  development.yaml  staging.yaml
documentation/: stress_test.jmx
documentation/bruno/: Create user.bru  Get users.bru
documentation/sql/: 1_0_create_table.sql  1_1_multi_tenancy_setup_create_tenants.sql  1_2_multi_tenancy_define_function_add_tenant_id_column.sql  1_5_multi_tenancy_define_trigger_set_tenant_id.sql
infra/: README.md  infra_app_spec_update.sh  infra_create_environment_database_cluster.sh  infra_create_environment_dedicated_cluster_database.sh  infra_create_environment_dedicated_database_add_minimal_migration_permissions.sh  spec.production.yaml  spec.staging.yaml
infra/databases/: infra_create_environment_database_cluster.sh  infra_create_environment_dedicated_cluster_database.sh  infra_create_environment_dedicated_database_migration_user.sh
infra/specs/: spec.development.yaml  spec.production.yaml  spec.staging.yaml
migrations/: 20241020070313_create_table.sql  20241020070313_create_table.sql.sql  20241020070406_multi_tenancy_setup_create_tenants.sql.sql  20241020070448_multi_tenancy_define_function_add_tenant_id_column.sql  20241020070448_multi_tenancy_define_function_add_tenant_id_column_functio.sql  20241020070521_multi_tenancy_define_function_setup_tenant_base_role.sql  20241020070521_multi_tenancy_define_function_setup_tenant_base_role_and_access.sql  20241020070557_multi_tenancy_define_function_add_current_user_tenant_rls_policy.sql  20241020070557_multi_tenancy_define_function_add_table_tenant_row_level_isolation_policy.sql  20241020070643_multi_tenancy_define_trigger_set_tenant_id.sql  20241020070711_multi_tenancy_define_function_add_before_upsert_set_tenant_id_trigger.sql.sql  20241020070743_multi_tenancy_define_function_upsert_tenant_role.sql  20241020070816_multi_tenancy_define_create_tenant_with_role_function.sql.sql  20241020070816_multi_tenancy_define_function_create_tenant_with_role.sql  20241020070849_multi_tenancy_define_update_tenant_password_function.sql.sql  20241020070915_multi_tenancy_define_get_tenant_by_uuid.sql.sql  20241020071224_multi_tenancy_setup.sql.sql  20241020071230_multi_tenancy_post_setup.sql
migrations/development/: 20241020071230_multi_tenancy_post_setup.sql  20241020071230_multi_tenancy_setup.sql
migrations/production/: 20241020071224_multi_tenancy_setup.sql
migrations/staging/: 20241020071230_multi_tenancy_post_setup.sql  20241020071230_multi_tenancy_setup.sql
rust-actix-multi-tenant/: Create user.bru  Get users.bru  bruno.json
rust-actix-multi-tenant/environments/: local.bru  production.bru
scripts/: init_db.sh
sql/: 1_0_create_table.sql  1_10_multi_tenancy_define_get_tenant_by_uuid.sql  1_10_multi_tenancy_setup.sql  1_11_multi_tenancy_setup.sql  1_2_multi_tenancy_define_function_add_tenant_id_column_function.sql  1_3_multi_tenancy_define_function_setup_tenant_base_role.sql  1_3_multi_tenancy_define_function_setup_tenant_base_role_and_access.sql  1_4_multi_tenancy_define_function_add_current_user_tenant_rls_policy.sql  1_4_multi_tenancy_define_function_add_table_tenant_row_level_isolation_policy.sql  1_6_multi_tenancy_define_function_add_before_upsert_set_tenant_id_trigger.sql  1_7_multi_tenancy_define_upsert_tenant_role_function.sql  1_8_multi_tenancy_define_create_tenant_with_role_function.sql  1_8_multi_tenancy_define_function_create_tenant_with_role.sql  1_9_multi_tenancy_define_function_update_tenant_password.sql  multi_tenancy_hld.md
src/: configuration.rs  configurations.rs  lib.rs  main.rs  migrations.rs  startup.rs  telemetry.rs
src/deserializers/: deserialize_number_from_string.rs  (+2 more)
(+60 files in other folders)
