[package]
name = "rust-actix-postgres-multi-tenant"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust-actix-postgres-multi-tenant"

[dependencies]
openssl = "0.10"
actix-web = { version = "4.9", features = ["openssl"] }
actix-session = { version = "0.10.1", features = [
    "cookie-session"
] }
actix-cors = { version = "0.7" }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }
sqlx-paginated = { version = "0.2.29", features = ["postgres", "tracing"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
config = "0.15.6"
uuid = { version = "1.12.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.15"
secrecy = { version = "0.10.3", features = ["serde"] }
argon2 = "0.5.3"
anyhow = "1.0.95"
thiserror = "2.0.11"
hmac = "0.12.1"
aes-gcm = "0.10.3"
hex = "0.4.3"
rand = "0.8.5"
actix-web-validator = "6.0.0"
validator = { version = "0.19.0", features = ["derive"] }
