[package]
name = "rust-actix-postgres-multi-tenant"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust-actix-postgres-multi-tenant"

[dependencies]
openssl = "0.10"
actix-web = { version = "4.9", features = ["openssl"] }
actix-session = { version = "0.10.1", features = [
    "cookie-session"
] }
actix-cors = { version = "0.7.1" }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }
sqlx-paginated = { version = "0.2.32", features = ["postgres", "tracing"] }
config = { version = "0.15.11" }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.135"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.15"
secrecy = { version = "0.10.3", features = ["serde"] }
anyhow = "1.0.95"
thiserror = "2.0.11"
aes-gcm = "0.10.3"
hex = "0.4.3"
rand = "0.9.1"
validator = { version = "0.20.0", features = ["derive"] }
